tdf#103710: rotate all glyphs in vertical runs

So that we base the rotation or not based on the resolved script,
instead of using the outdated and hard-coded ranges in GetVerticalFlags.

Change-Id: I52ee38c4151f30d98287e64f852b4d2df143c719